--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+.DS_Store
 
 # Package Files #
 *.jar
@@ -18,6 +19,8 @@
 *.zip
 *.tar.gz
 *.rar
+
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
