--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,12 @@ target/
 *.zip
 *.tar.gz
 *.rar
-
+.vscode/
+.vscode/*
+history/
+history/*
+workspaceStorage/
+workspaceStorage/*
 
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
