New pr and packer-b

--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -6,10 +6,6 @@ on:
 
 env:
   AWS_REGION: us-east-1  
-  DB_USER: ${{ secrets.DB_USER }}
-  DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-  DB_NAME: webapp
-  DB_PORT: 5432
 
 jobs:
   build-ami:
@@ -25,6 +21,11 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
+      - name: Debug AWS Configuration
+        run: |
+          aws sts get-caller-identity
+          aws ec2 describe-regions --output table --region us-east-1
+
       - name: Install Packer
         uses: hashicorp/setup-packer@v2
         with:
@@ -33,4 +34,5 @@ jobs:
       - name: Build AMI with Packer
         run: |
           packer init packer-webapp.pkr.hcl
-          packer build -var "db_user=${{ env.DB_USER }}" -var "db_password=${{ env.DB_PASSWORD }}" packer-webapp.pkr.hcl
+          packer validate packer-webapp.pkr.hcl
+          packer build -var "db_user=${{ secrets.DB_USER }}" -var "db_password=${{ secrets.DB_PASSWORD }}" packer-webapp.pkr.hcl
