--- a/myapp.service
+++ b/myapp.service
@@ -4,14 +4,14 @@ After=network.target
 
 [Service]
 Type=simple
-User=ubuntu
+User=csye6225
 ExecStart=/usr/bin/java -jar /opt/myapp/app.jar
 Restart=on-failure
-Environment=DB_USER=your_db_username
-Environment=DB_PASSWORD=your_db_password
-Environment=DB_HOST=your_db_host
+Environment=DB_USER=${DB_USER}
+Environment=DB_PASSWORD=${DB_PASSWORD}
+Environment=DB_HOST=localhost
 Environment=DB_PORT=5432
-Environment=DB_NAME=your_db_name
+Environment=DB_NAME=csye6225
 
 [Install]
 WantedBy=multi-user.target
