--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -15,6 +15,19 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: 'maven'
+
+      - name: Build Application
+        run: |
+          mvn clean package -DskipTests
+          cp target/*.jar app.jar
+
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
