--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -1,5 +1,5 @@
-name: Packer AMI Build
-
+name: Build AMI
+run-name: "Build AMI from commit ${{ github.sha }}"
 on:
   push:
     branches:
@@ -55,6 +55,7 @@ jobs:
             -var "db_password=${DB_PASSWORD}" \
             packer-webapp.pkr.hcl
           packer build \
+            -var "instance_type=t3.medium" \
             -var "dev_account_id=${DEV_ACCOUNT_ID}" \
             -var "demo_account_id=${DEMO_ACCOUNT_ID}" \
             -var "db_user=${DB_USER}" \
