--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,18 @@
 spring:
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+  jackson:
+    property-naming-strategy: SNAKE_CASE
+    serialization:
+      FAIL_ON_EMPTY_BEANS: false
+    deserialization:
+      FAIL_ON_UNKNOWN_PROPERTIES: false
   datasource:
-    url: jdbc:postgresql://localhost:5432/webapp
-    username: khursheed
-    password: Templerun12@
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
@@ -12,12 +22,25 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
   management:
-  endpoints:
-    web:
-      exposure:
-        include: health
+    endpoints:
+      web:
+        exposure:
+          include: health
 
 logging:
   level:
-    org.springframework: INFO
+    org.springframework: DEBUG
+    org.springframework.web: DEBUG
+    org.springframework.http.converter.json: DEBUG
     com.example: DEBUG
+
+aws:
+  region: ${AWS_REGION}
+  s3:
+    bucket: ${AWS_BUCKET_NAME}
+
+sendgrid:
+  api:
+    key: ${SENDGRID_API_KEY}
+  from:
+    email: ${EMAIL_FROM}
