--- a/cloudwatch-config.json
+++ b/cloudwatch-config.json
@@ -1,30 +1,56 @@
 {
   "agent": {
-    "metrics_collection_interval": 10,
-    "logfile": "/var/log/amazon-cloudwatch-agent.log"
+    "run_as_user": "csye6225",
+    "metrics_collection_interval": 60
   },
   "logs": {
     "logs_collected": {
       "files": {
         "collect_list": [
           {
-            "file_path": "/opt/myapp/application.log",
+            "file_path": "/var/log/myapp/application.log",
             "log_group_name": "csye6225",
-            "log_stream_name": "webapp",
+            "log_stream_name": "{instance_id}-application",
+            "timestamp_format": "%Y-%m-%d %H:%M:%S.%f",
+            "multi_line_start_pattern": "{timestamp_format}",
+            "encoding": "utf-8"
+          },
+          {
+            "file_path": "/var/log/myapp/myapp.log",
+            "log_group_name": "csye6225",
+            "log_stream_name": "{instance_id}-service",
             "timestamp_format": "%Y-%m-%d %H:%M:%S",
-            "timezone": "UTC"
+            "encoding": "utf-8"
           }
         ]
       }
     }
   },
   "metrics": {
+    "namespace": "CSYE6225",
     "metrics_collected": {
       "statsd": {
         "service_address": ":8125",
         "metrics_collection_interval": 10,
         "metrics_aggregation_interval": 60
+      },
+      "cpu": {
+        "measurement": ["cpu_usage_idle", "cpu_usage_user", "cpu_usage_system"],
+        "metrics_collection_interval": 60
+      },
+      "mem": {
+        "measurement": ["mem_used_percent"],
+        "metrics_collection_interval": 60
+      },
+      "disk": {
+        "measurement": ["disk_used_percent"],
+        "resources": ["/"],
+        "metrics_collection_interval": 60
       }
+    },
+    "append_dimensions": {
+      "InstanceId": "${aws:InstanceId}",
+      "AutoScalingGroupName": "${aws:AutoScalingGroupName}"
     }
   }
 }
