--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -1,18 +1,15 @@
-name: Build AMI
-run-name: "Build AMI from commit ${{ github.sha }}"
+name: Build and Deploy AMI
+run-name: "Build and Deploy AMI from commit ${{ github.sha }}"
 
 on:
-  push:
+  pull_request:
     branches:
       - main
-  workflow_dispatch:
-
-env:
-  AWS_REGION: us-east-1
-  PACKER_LOG: 1  
+    types: [closed]
 
 jobs:
   build-ami:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -31,15 +28,15 @@ jobs:
 
       - name: Build Application
         run: |
-          mvn clean package -DskipTests
+          mvn clean package
           cp target/*.jar app.jar
           ls -l app.jar  # Verify jar exists
 
-      - name: Configure AWS Credentials
+      - name: Configure AWS Credentials (Dev Account)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Install Packer
@@ -87,7 +84,65 @@ jobs:
             -var "sendgrid_api_key=${SENDGRID_API_KEY}" \
             -var "email_from=${EMAIL_FROM}" \
             packer-webapp.pkr.hcl
-        continue-on-error: false
+
+          AMI_ID=$(aws ec2 describe-images --owners self --filters "Name=name,Values=webapp-ami-*" --query 'sort_by(Images, &CreationDate)[-1].ImageId' --output text)
+          echo "AMI_ID=$AMI_ID" >> $GITHUB_ENV
+
+      - name: Share AMI with Demo Account
+        run: |
+          aws ec2 modify-image-attribute \
+            --image-id ${{ env.AMI_ID }} \
+            --launch-permission "Add=[{UserId=${{ secrets.DEMO_ACCOUNT_ID }}]"
+
+      - name: Configure AWS Credentials (Demo Account)
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.DEMO_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.DEMO_AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Update Launch Template
+        run: |
+          VERSION=$(aws ec2 create-launch-template-version \
+            --launch-template-name webapp-launch-template \
+            --source-version '$Latest' \
+            --launch-template-data "{\"ImageId\":\"${{ env.AMI_ID }}\"}" \
+            --query 'LaunchTemplateVersion.VersionNumber' --output text)
+          echo "New Launch Template Version: $VERSION"
+
+          # Set the launch template default version to the new version
+          aws ec2 modify-launch-template \
+            --launch-template-name webapp-launch-template \
+            --default-version $VERSION
+
+      - name: Start Instance Refresh
+        run: |
+          REFRESH_ID=$(aws autoscaling start-instance-refresh \
+            --auto-scaling-group-name webapp-asg \
+            --preferences '{"MinHealthyPercentage": 90}' \
+            --query 'InstanceRefreshId' --output text)
+          echo "REFRESH_ID=$REFRESH_ID" >> $GITHUB_ENV
+
+      - name: Wait for Refresh
+        run: |
+          TIMEOUT=1800  # 30 minutes
+          ELAPSED=0
+          INTERVAL=30
+          while true; do
+            STATUS=$(aws autoscaling describe-instance-refreshes \
+              --auto-scaling-group-name webapp-asg \
+              --instance-refresh-ids ${{ env.REFRESH_ID }} \
+              --query 'InstanceRefreshes[0].Status' --output text)
+            echo "Current status: $STATUS"
+            if [ "$STATUS" = "Successful" ]; then exit 0; fi
+            if [ "$STATUS" = "Failed" ]; then exit 1; fi
+            sleep $INTERVAL
+            ELAPSED=$((ELAPSED + INTERVAL))
+            if [ $ELAPSED -ge $TIMEOUT ]; then
+              echo "Instance refresh timed out."
+              exit 1
+            fi
+          done
 
       - name: Cleanup
         if: always()
