--- a/cloudwatch-config.json
+++ b/cloudwatch-config.json
@@ -1,7 +1,8 @@
 {
   "agent": {
-    "run_as_user": "csye6225",
-    "metrics_collection_interval": 60
+    "metrics_collection_interval": 60,
+    "run_as_user": "root",
+    "logfile": "/opt/aws/amazon-cloudwatch-agent/logs/amazon-cloudwatch-agent.log"
   },
   "logs": {
     "logs_collected": {
@@ -11,16 +12,15 @@
             "file_path": "/var/log/myapp/application.log",
             "log_group_name": "csye6225",
             "log_stream_name": "{instance_id}-application",
-            "timestamp_format": "%Y-%m-%d %H:%M:%S.%f",
-            "multi_line_start_pattern": "{timestamp_format}",
-            "encoding": "utf-8"
+            "timezone": "UTC",
+            "timestamp_format": "%Y-%m-%d %H:%M:%S.%f"
           },
           {
-            "file_path": "/var/log/myapp/myapp.log",
+            "file_path": "/var/log/myapp/access.log",
             "log_group_name": "csye6225",
-            "log_stream_name": "{instance_id}-service",
-            "timestamp_format": "%Y-%m-%d %H:%M:%S",
-            "encoding": "utf-8"
+            "log_stream_name": "{instance_id}-access",
+            "timestamp_format": "[%d/%b/%Y:%H:%M:%S %z]",
+            "timezone": "UTC"
           }
         ]
       }
@@ -31,26 +31,25 @@
     "metrics_collected": {
       "statsd": {
         "service_address": ":8125",
-        "metrics_collection_interval": 10,
+        "metrics_collection_interval": 60,
+        "metrics_aggregation_interval": 60
+      },
+      "collectd": {
         "metrics_aggregation_interval": 60
       },
       "cpu": {
-        "measurement": ["cpu_usage_idle", "cpu_usage_user", "cpu_usage_system"],
-        "metrics_collection_interval": 60
-      },
-      "mem": {
-        "measurement": ["mem_used_percent"],
-        "metrics_collection_interval": 60
+        "measurement": ["cpu_usage_idle", "cpu_usage_iowait", "cpu_usage_user", "cpu_usage_system"]
       },
       "disk": {
-        "measurement": ["disk_used_percent"],
-        "resources": ["/"],
-        "metrics_collection_interval": 60
+        "measurement": ["used_percent"],
+        "resources": ["*"]
+      },
+      "mem": {
+        "measurement": ["mem_used_percent"]
       }
     },
     "append_dimensions": {
-      "InstanceId": "${aws:InstanceId}",
-      "AutoScalingGroupName": "${aws:AutoScalingGroupName}"
+      "InstanceId": "${aws:InstanceId}"
     }
   }
 }
