--- a/myapp.service
+++ b/myapp.service
@@ -1,27 +1,22 @@
-[Unit]
-Description=Spring Boot WebApp Service
-After=network.target amazon-cloudwatch-agent.service
+    [Unit]
+    Description=Spring Boot WebApp Service
+    After=network.target amazon-cloudwatch-agent.service
 
-[Service]
-Type=simple
-User=csye6225
-Group=csye6225
-WorkingDirectory=/opt/myapp
-ExecStart=/usr/bin/java \
-    -Dlogging.charset.file=UTF-8 \
-    -Dlogging.charset.console=UTF-8 \
-    -Dlogging.file.path=/var/log/myapp \
-    -Dlogging.file.name=/var/log/myapp/application.log \
-    -Dlogging.level.controllers=DEBUG \
-    -Dlogging.level.services=DEBUG \
-    -jar /opt/myapp/app.jar
-Restart=always
-RestartSec=10
-StandardOutput=append:/var/log/myapp/myapp.log
-StandardError=append:/var/log/myapp/myapp.log
-SuccessExitStatus=143
-TimeoutStopSec=10
-TimeoutStartSec=60
+    [Service]
+    Type=simple
+    User=csye6225
+    Group=csye6225
+    WorkingDirectory=/opt/myapp
+    ExecStart=/usr/bin/java \
+        -Dlogging.config=/opt/myapp/logback-spring.xml \
+        -Dlogging.charset.file=UTF-8 \
+        -Dlogging.charset.console=UTF-8 \
+        -jar /opt/myapp/app.jar
+    Restart=always
+    RestartSec=10
+    SuccessExitStatus=143
+    TimeoutStopSec=10
+    TimeoutStartSec=60
 
-[Install]
-WantedBy=multi-user.target
+    [Install]
+    WantedBy=multi-user.target
