--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Build Application
         run: |
-          mvn clean package
+          mvn clean package -Dmaven.test.skip=true
           cp target/*.jar app.jar
           ls -l app.jar  # Verify jar exists
 
