--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Install Packer
         uses: hashicorp/setup-packer@v2
