--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,13 +2,14 @@ name: CICD
 run-name: "Build and Deploy AMI from commit ${{ github.sha }}"
 
 on:
-  push:
+  pull_request:
+    types: [closed]
     branches:
       - main
 
 jobs:
   build_ami:
-    if: github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch'
+    if: github.event.pull_request.merged == true
     name: Build AMI with Packer and Extract AMI ID
     runs-on: ubuntu-latest
     outputs:
