--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,14 +2,12 @@ name: CICD
 run-name: "Build and Deploy AMI from commit ${{ github.sha }}"
 
 on:
-  pull_request:
-    types: [closed]
+  push:
     branches:
       - main
 
 jobs:
   build_ami:
-    if: github.event.pull_request.merged == true
     name: Build AMI with Packer and Extract AMI ID
     runs-on: ubuntu-latest
     outputs:
