--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -124,85 +124,50 @@ jobs:
         id: launch_template
         run: |
           echo "Attempting to retrieve Launch Template..."
-
-          # Set the Launch Template name prefix
+        
           LAUNCH_TEMPLATE_PREFIX="csye6225-asg"
-
-          # Retrieve all Launch Templates and their IDs
+        
+          echo "Retrieving all launch templates..."
           ALL_TEMPLATES=$(aws ec2 describe-launch-templates \
             --query 'LaunchTemplates[*].[LaunchTemplateName,LaunchTemplateId]' \
             --output text)
-
-          # Initialize variables
+          echo "Available Launch Templates:"
+          echo "$ALL_TEMPLATES"
+        
           LAUNCH_TEMPLATE_NAME=""
           LAUNCH_TEMPLATE_ID=""
-
-          # Loop through the templates to find the one that matches the prefix
+        
           while read -r NAME ID; do
+            echo "Checking Launch Template Name: $NAME, ID: $ID"
             if [[ "$NAME" == "$LAUNCH_TEMPLATE_PREFIX"* ]]; then
               LAUNCH_TEMPLATE_NAME="$NAME"
               LAUNCH_TEMPLATE_ID="$ID"
+              echo "Match found: $LAUNCH_TEMPLATE_NAME with ID $LAUNCH_TEMPLATE_ID"
               break
             fi
           done <<< "$ALL_TEMPLATES"
-
-          echo "Retrieved Launch Template Name: $LAUNCH_TEMPLATE_NAME"
-          echo "Retrieved Launch Template ID: $LAUNCH_TEMPLATE_ID"
-
+        
           if [ -z "$LAUNCH_TEMPLATE_ID" ]; then
             echo "Error: No Launch Template starting with '$LAUNCH_TEMPLATE_PREFIX' found"
             exit 1
           fi
-
+        
           echo "LAUNCH_TEMPLATE_ID=$LAUNCH_TEMPLATE_ID" >> $GITHUB_ENV
-
+        
           NEW_VERSION=$(aws ec2 create-launch-template-version \
             --launch-template-id $LAUNCH_TEMPLATE_ID \
             --source-version '$Latest' \
             --launch-template-data '{"ImageId":"'"${{ needs.build_ami.outputs.ami_id }}"'"}' \
             --query 'LaunchTemplateVersion.VersionNumber' \
             --output text)
-
+        
           if [ -z "$NEW_VERSION" ]; then
             echo "Failed to create new launch template version."
             exit 1
           fi
-
+        
           echo "New Launch Template Version: $NEW_VERSION"
-
+        
           aws ec2 modify-launch-template \
             --launch-template-id $LAUNCH_TEMPLATE_ID \
             --default-version $NEW_VERSION
-
-      - name: Start and Monitor Instance Refresh
-        run: |
-          REFRESH_ID=$(aws autoscaling start-instance-refresh \
-            --auto-scaling-group-name csye6225-asg \
-            --preferences '{"MinHealthyPercentage":90}' \
-            --query 'InstanceRefreshId' \
-            --output text)
-          
-          if [ -z "$REFRESH_ID" ]; then
-            echo "Failed to start instance refresh."
-            exit 1
-          fi
-          
-          while true; do
-            STATUS=$(aws autoscaling describe-instance-refreshes \
-              --auto-scaling-group-name csye6225-asg \
-              --instance-refresh-ids "$REFRESH_ID" \
-              --query 'InstanceRefreshes[0].Status' \
-              --output text)
-
-            echo "Instance Refresh Status: $STATUS"
-
-            if [[ "$STATUS" = "Successful" ]]; then
-              echo "Instance refresh completed successfully."
-              break
-            elif [[ "$STATUS" = "Failed" || "$STATUS" = "Cancelled" ]]; then
-              echo "Instance refresh ${STATUS}."
-              exit 1
-            else
-              echo "Instance refresh is in progress. Checking again in 30 seconds..."
-              sleep 30
-            fi
